<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentArtigoView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.ArtigoViewFragment" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/artigos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spViewArticles"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvDataPost"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/data"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spViewArticles"
        tools:ignore="TextSizeCheck" />

    <View
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="#66A1A1A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloArticle" />

    <View
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="#66A1A1A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataPost" />
    <View
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="#66A1A1A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConteudoView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSearchViewArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/actionButton"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toEndOf="@+id/spViewArticles"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvTituloArticle"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataPost"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvConteudoView"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_conteudo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloArticle" />

    <TextView
        android:id="@+id/tvFonte"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/fonte"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConteudoView" />
</androidx.constraintlayout.widget.ConstraintLayout>