<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#FF5EF3BF"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/btnCad"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inSenha" />

    <EditText
        android:id="@+id/inLogin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="226dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        android:drawableStart="@drawable/ic_login"
        android:textColorHint="#353434"
        app:layout_constraintBottom_toTopOf="@+id/TVerrLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#5EF3BF"
        android:text="@string/cadastro"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/inSenha" />

    <EditText
        android:id="@+id/inSenha"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColorHint="#454545"
        android:drawableStart="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="@+id/inLogin"
        app:layout_constraintTop_toBottomOf="@+id/inLogin" />

    <TextView
        android:id="@+id/TVerrLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="191dp"
        android:textAlignment="center"
        android:textColor="#CA5B5B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCad"
        app:layout_constraintStart_toStartOf="@+id/btnCad"
        app:layout_constraintTop_toBottomOf="@+id/inLogin" />

    <TextView
        android:id="@+id/tvLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>